@startuml
'https://plantuml.com/class-diagram

hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company
class Ship
class ShipDynData
class Container
class Cargo_Manifest_Load
class Cargo_Manifest_Unload
class Stage
class Location
class Country
class Truck
class Port
class Warehouse
class Stage

Company "1" -- "*" Ship: contains >
Ship "1" -- "*" ShipDynData: has >
Ship "*" -- "*" Container: transports >
Truck "1" -- "1" Container: transports >
Container "*" -- "*" Cargo_Manifest_Load: associated to >
Cargo_Manifest_Load "*" -- "1" Port: assigned to >
Location "*" -- "1" Country: belongs >
Port "1" -- "*" Stage: associated to >
Cargo_Manifest_Load "1" -- "*" Stage: contains >
Cargo_Manifest_Unload "1" -- "1" Stage: associated with >
Port "1" -- "*" Cargo_Manifest_Unload: associated to >
Port --|> Location
Warehouse --|> Location


class Company {

}

class Ship{
 - mmsi
 - shipName
 - imo
 - num_energy_gen
 - gen_pow_out
 - callSign
 - vesselType
 - length
 - width
 - capacity
 - draft
}

class ShipDynData{
 - baseDateTime
 - latitude
 -longitude
 -sog
 -cog
 -heading
 -position
 -cargo
 -transceiver
}

class Container{
-id
-check_digit
-iso
-weight
-max_weight
-max_weight_incl
-max_volume
-refrigerated
-certificate
-repair_recomendation
}

class Cargo_Manifest_Load{
-container_id
-container_position
-container_gross_weight
-status
}

class Location{
-latitude
-longitude
-name
}

class Country{
-name
-continent
}

class Truck{

}

class Port{

}

class Warehouse{

}

class Stage{
-departure_date
-arrival_date
}

@enduml